fixed cards getting covered by footer

--- a/a2/src/app.css
+++ b/a2/src/app.css
@@ -220,7 +220,7 @@ body {
 
 .mainContentArea{
   margin: 1em 0;
-
+  padding-bottom: 10em;
 }
 
 /* navbar */
